--- a/index.html
+++ b/index.html
@@ -3,11 +3,35 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./style.css"/>
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/cuban.html">Cuban Ropa Vieja</a>
-        <a href="./recipes/mac-cheese.html">Slow Cooker Mac and Cheese</a>
-        <a href="./recipes/chicken-tacos.html">Slow Cooker Chicken and Fajitas Tacos</a>
-    </body>
+        <div class="recipe-container">
+            <div class="recipe recipe-1">
+                <div class="rec-links">
+                    <a href="./recipes/cuban.html">Cuban Ropa Vieja</a>
+                </div>
+                <div class="rec-image">
+                    <img src="./assets/ropa_img.jpeg" alt="chicken">
+                </div>
+            </div>
+            <div class="recipe recipe-2">
+                <div class="rec-links">
+                    <a class="rec-links" href="./recipes/mac-cheese.html">Slow Cooker Mac and Cheese</a>
+                </div>
+                <div class="rec-image">
+                    <img src="./assets/mac_img.jpeg" alt="mac">
+                </div>
+            </div>
+            <div class="recipe recipe-3">
+                <div class="rec-links">
+                    <a href="./recipes/chicken-tacos.html">Slow Cooker Chicken and Fajitas Tacos</a>
+                </div>
+                <div class="rec-image">
+                    <img src="./assets/chicken.jpeg" alt="ropa">
+                </div>
+            </div>
+        </div>
+    </body> 
 </html>
